	* Added a 'CONTACTS.GENERAL_MANAGER' field to the database.
	* Incremented the database version to 22.
	* Added a 'Gen Mgr' column to the 'Contacts' dialog in
	'davit/list_contacts.cpp'.
	* Added a 'Receives General Manager E-Mail' checkbox to the
	'Edit Contact' dialog in 'davit/edit_contact.cpp' and
	'davit/edit_contact.h'.
	* Added an 'All Affiliate Contact' report in
	'davit/affiliatesbyprogram_report.cpp'.
2012-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.0.
2013-02-26 Fred Gleason <fredg@paravelsystems.com>
	* Added the AM_SILENT_RULES macro in 'configure.in'.
	* Cleaned up compiler warnings in 'lib/dvtweb.cpp', 'lib/dvtweb.h',
	'davit/list_providers.cpp', 'lib/list_programs.cpp',
	'davit/affiliate_report.cpp', 'davit/affiliatesbymarket_report.cpp',
	'davit/maildialog.cpp', 'lib/dvtcmdswitch.cpp' and
	'lib/dvtcmdswitch.h'.
2013-03-11 Fred Gleason <fredg@paravelsystems.com>
	* Added 'kdmrc-example'.
	* Documented kdm(8) configuration in 'INSTALL'.
2014-01-02 Fred Gleason <fredg@paravelsystems.com>
	* Added 'CONTACT NAME' and 'CONTACT PHONE' to the Affidavit Contact
	report in 'davit/affidavit_report.cpp', 'davit/list_reports.cpp'
	and 'davit/list_reports.h'.
2014-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'davit.spec.in' and 'Makefile.am' for CentOS.
2014-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.1.
2014-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Changed installation location of 'dvt-bin.conf' from
	'/etc/apache2/conf.d/' to '/etc/httpd.conf.d/'.
2014-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.2.
2014-09-29 Fred Gleason <fredg@paravelsystems.com>
	* Moved 'configure.in' to 'configure.ac'.
	* Modernized AC_INIT() and AM_INIT() invocations in
	'configure.ac'.
2014-09-29 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'make rpm' target to use in-home RPM build
	directories.