@@ -34,7 +34,7 @@ void MainWidget::importExternalData()
   QSqlQuery *q;
 
   if(QMessageBox::question(this,tr("Davit - External Data Import"),
-			   tr("This will import an external data set generated from\nPrecisionTrak using the \"Davit-v2\" template.\n\nProceed?"),
+			   tr("This will import an external data set generated from\nPrecisionTrak using the \"Davit-v3\" template.\n\nProceed?"),
 			   QMessageBox::Yes,QMessageBox::No)!=QMessageBox::Yes) {
     return;
   }
@@ -42,7 +42,6 @@ void MainWidget::importExternalData()
   //
   // Open Source File
   //
-  char buffer[1024];
   QString filename=
     QFileDialog::getOpenFileName("","CSV Files (*.csv)",this);
   if(filename.isNull()) {
@@ -60,15 +59,9 @@ void MainWidget::importExternalData()
   //
   std::vector<QStringList> rows;
   QStringList cols;
-  if(fgets(buffer,1024,f)==NULL) {
-    QMessageBox::warning(this,tr("Davit - File Error"),
-			 tr("Source file contains no data!"));
-    fclose(f);
-    return;
-  }
-  buffer[strlen(buffer)-2]=0;  // Remove LF
-  cols=cols.split(",",buffer);
-  if(cols.size()!=33) {
+  QString line=GetNextLine(f);
+  cols=cols.split(",",line);
+  if(cols.size()!=31) {
     QMessageBox::warning(this,tr("Davit - File Error"),
 	tr("Source file is unrecognized (incorrect number of data columns)."));
     fclose(f);
@@ -77,41 +70,48 @@ void MainWidget::importExternalData()
   for(unsigned i=0;i<cols.size();i++) {
     cols[i].replace("\"","");
   }
-  if((cols[0]!="Radio - Station")||
-     (cols[1]!=" Freq")||
-     (cols[2]!=" Call Letters")||
-     (cols[3]!=" City of License")||
-     (cols[4]!=" State of License")||
-     (cols[5]!=" Phone")||
-     (cols[6]!=" Fax")||
-     (cols[7]!=" Email")||
-     (cols[8]!=" Website")||
-     (cols[9]!=" Home Arb MSA Rank")||
-     (cols[10]!=" Geo Home Market")||
-     (cols[11]!=" Nielsen DMA")||
-     (cols[12]!=" Nielsen DMA Rank")||
-     (cols[13]!=" Country")||
-     (cols[14]!=" Primary Format")||
-     (cols[15]!=" Licensee")||
-     (cols[16]!=" Mailing Address")||
-     (cols[17]!=" Mailing Address2")||
-     (cols[18]!=" Mailing City")||
-     (cols[19]!=" Mailing State")||
-     (cols[20]!=" Mailing Zip")||
-     (cols[21]!=" Genl Mgr")||
-     (cols[22]!=" Genl Mgr Title")||
-     (cols[23]!=" Genl Mgr Email")||
-     (cols[24]!=" Prog Dir")||
-     (cols[25]!=" Prog Dir Title")||
-     (cols[26]!=" Prog Dir Email")||
-     (cols[27]!=" Traffic Mgr")||
-     (cols[28]!=" Traffic Mgr Email")||
-     (cols[29]!=" Traffic Phone")||
-     (cols[30]!=" Traffic Fax")||
-     (cols[31]!=" Day/Power")||
-     (cols[32]!=" Nite/Power")) {
-    QMessageBox::warning(this,tr("Davit - File Error"),
-       tr("Source file is unrecognized (unexpected names in column header)."));
+  QStringList errs;
+  VerifyPrecisionTrakRecord(cols[0],"Station (ie. WABC-AM  WCBS-FM)",errs);
+  VerifyPrecisionTrakRecord(cols[1]," Freq",errs);
+  VerifyPrecisionTrakRecord(cols[2]," Call Letters (ie. WABC   WCBS)",errs);
+  VerifyPrecisionTrakRecord(cols[3]," City of License",errs);
+  VerifyPrecisionTrakRecord(cols[4]," State of License",errs);
+  VerifyPrecisionTrakRecord(cols[5]," Phone",errs);
+
+  VerifyPrecisionTrakRecord(cols[6]," Fax",errs);
+     //     (cols[7]!=" Email")||
+  VerifyPrecisionTrakRecord(cols[7]," Website",errs);
+  VerifyPrecisionTrakRecord(cols[8]," Home Nielsen Audio MSA",errs);
+  VerifyPrecisionTrakRecord(cols[9]," Home Nielsen Audio Rank",errs);
+  VerifyPrecisionTrakRecord(cols[10]," Nielsen DMA",errs);
+  VerifyPrecisionTrakRecord(cols[11]," Nielsen DMA Rank",errs);
+  VerifyPrecisionTrakRecord(cols[12]," Country",errs);
+  VerifyPrecisionTrakRecord(cols[13]," Primary Format",errs);
+  VerifyPrecisionTrakRecord(cols[14]," Licensee",errs);
+  VerifyPrecisionTrakRecord(cols[15]," Mailing Address",errs);
+  VerifyPrecisionTrakRecord(cols[16]," Mailing Address2",errs);
+  VerifyPrecisionTrakRecord(cols[17]," Mailing City",errs);
+  VerifyPrecisionTrakRecord(cols[18]," Mailing State",errs);
+  VerifyPrecisionTrakRecord(cols[19]," Mailing Zip",errs);
+  VerifyPrecisionTrakRecord(cols[20]," Genl Mgr",errs);
+  VerifyPrecisionTrakRecord(cols[21]," Genl Mgr Title",errs);
+  VerifyPrecisionTrakRecord(cols[22]," Genl Mgr Email",errs);
+  VerifyPrecisionTrakRecord(cols[23]," Prog Dir",errs);
+  VerifyPrecisionTrakRecord(cols[24]," Prog Dir Title",errs);
+  VerifyPrecisionTrakRecord(cols[25]," Prog Dir Email",errs);
+  VerifyPrecisionTrakRecord(cols[26]," Traffic Mgr",errs);
+  VerifyPrecisionTrakRecord(cols[27]," Traffic Mgr Email",errs);
+  VerifyPrecisionTrakRecord(cols[28]," Traffic Phone",errs);
+     //     (cols[30]!=" Traffic Fax")||
+  VerifyPrecisionTrakRecord(cols[29]," Day/Power",errs);
+  VerifyPrecisionTrakRecord(cols[30]," Nite/Power",errs);
+
+  if(errs.size()>0) {
+    QString msg=tr("Source file is unrecognized (unexpected names in column header):");
+    for(unsigned i=0;i<errs.size();i++) {
+      msg+="\n"+errs[i];
+    }
+    QMessageBox::warning(this,tr("Davit - File Error"),msg);
     fclose(f);
     return;
   }
@@ -121,14 +121,14 @@ void MainWidget::importExternalData()
   //
   int lineno=2;
   bool ok=false;
-  while(fgets(buffer,1024,f)!=NULL) {
-    buffer[strlen(buffer)-2]=0;  // Remove LF
-    cols=DvtGetCommaList(buffer,true);
-    if(cols.size()==33) {
+  line=GetNextLine(f);
+
+  while(!line.isEmpty()) {
+    cols=DvtGetCommaList(line,true);
+    if(cols.size()==32) {
       cols[2].toInt(&ok);  // Ignore CPs
       if(!ok) {
 	rows.push_back(cols);
-	//ImportPrecisionTrakRecord(cols);
       }
     }
     else {
@@ -137,6 +137,7 @@ void MainWidget::importExternalData()
     }
 
     lineno++;
+    line=GetNextLine(f);
   }
 
   fclose(f);
@@ -151,14 +152,17 @@ void MainWidget::importExternalData()
   q=new QSqlQuery(sql);
   delete q;
   for(unsigned i=0;i<rows.size();i++) {
-    ProcessMarketRecord("MSA_MARKETS",rows[i][10],rows[i][9].toInt());
-    ProcessMarketRecord("DMA_MARKETS",rows[i][11],rows[i][12].toInt());
+    ProcessMarketRecord("MSA_MARKETS",rows[i][8],rows[i][9].toInt());
+    ProcessMarketRecord("DMA_MARKETS",rows[i][10],rows[i][11].toInt());
   }
 
   //
   // Pass 2: Import Affiliate Data
   //
   for(unsigned i=0;i<rows.size();i++) {
+    if((i%100)==0) {
+      printf("row: %u\n",i);
+    }
     ImportPrecisionTrakRecord(rows[i]);
   }
 }
@@ -233,8 +237,8 @@ void MainWidget::ImportPrecisionTrakRecord(const QStringList &cols)
   //
   // Get Market Data
   //
-  msa_rank=GetMarketRank("MSA_MARKETS",cols[10],cols[9].toInt());
-  dma_rank=GetMarketRank("DMA_MARKETS",cols[11],cols[12].toInt());
+  msa_rank=GetMarketRank("MSA_MARKETS",cols[8],cols[9].toInt());
+  dma_rank=GetMarketRank("DMA_MARKETS",cols[10],cols[11].toInt());
 
   //
   // Find (or Create) Matching Affiliate Record
@@ -301,55 +305,30 @@ void MainWidget::ImportPrecisionTrakRecord(const QStringList &cols)
   //
   // Update Affiliate Record
   //
-  sql=QString().sprintf("update AFFILIATES set \
-                         STATION_TYPE=\"%s\",\
-                         STATION_FREQUENCY=%6.1lf,\
-                         STATION_CALL=\"%s\",\
-                         LICENSE_CITY=\"%s\",\
-                         LICENSE_STATE=\"%s\",\
-                         PHONE=\"%s\",\
-                         FAX=\"%s\",\
-                         EMAIL_ADDR=\"%s\",\
-                         WEB_URL=\"%s\",\
-                         MARKET_NAME=\"%s\",\
-                         MARKET_RANK=%d,\
-                         DMA_NAME=\"%s\",\
-                         DMA_RANK=%d,\
-                         COUNTRY=\"%s\",\
-                         STATION_FORMAT=\"%s\",\
-                         BUSINESS_NAME=\"%s\",\
-                         ADDRESS1=\"%s\",\
-                         ADDRESS2=\"%s\",\
-                         CITY=\"%s\",\
-                         STATE=\"%s\",\
-                         ZIPCODE=\"%s\",\
-                         STATION_POWER=%d,\
-                         STATION_NIGHT_POWER=%d \
-                         where ID=%d",
-			(const char *)type,
-			cols[1].toDouble(),
-			(const char *)cols[2],
-			(const char *)cols[3],
-			(const char *)cols[4],
-			(const char *)cols[5],
-			(const char *)cols[6],
-			(const char *)cols[7],
-			(const char *)cols[8],
-			(const char *)cols[10],
-			msa_rank,
-			(const char *)cols[11],
-			dma_rank,
-			(const char *)cols[13],
-			(const char *)cols[14],
-			(const char *)cols[15],
-			(const char *)cols[16],
-			(const char *)cols[17],
-			(const char *)cols[18],
-			(const char *)cols[19],
-			(const char *)cols[20],
-			cols[31].toInt(),
-			cols[32].toInt(),
-			affiliate_id);
+  sql=QString("update AFFILIATES set ")+
+    "STATION_TYPE=\""+type+"\","+
+    QString().sprintf("STATION_FREQUENCY=%6.1lf,",cols[1].toDouble())+
+    "STATION_CALL=\""+DvtEscapeString(cols[2])+"\","+
+    "LICENSE_CITY=\""+DvtEscapeString(cols[3])+"\","+
+    "LICENSE_STATE=\""+DvtEscapeString(cols[4])+"\","+
+    "PHONE=\""+DvtEscapeString(cols[5])+"\","+
+    "FAX=\""+DvtEscapeString(cols[6])+"\","+
+    "WEB_URL=\""+DvtEscapeString(cols[7])+"\","+
+    "MARKET_NAME=\""+DvtEscapeString(cols[8])+"\","+
+    QString().sprintf("MARKET_RANK=%d,",msa_rank)+
+    "DMA_NAME=\""+DvtEscapeString(cols[10])+"\","+
+    QString().sprintf("DMA_RANK=%d,",dma_rank)+
+    "COUNTRY=\""+DvtEscapeString(cols[12])+"\","+
+    "STATION_FORMAT=\""+DvtEscapeString(cols[13])+"\","+
+    "BUSINESS_NAME=\""+DvtEscapeString(cols[14])+"\","+
+    "ADDRESS1=\""+DvtEscapeString(cols[15])+"\","+
+    "ADDRESS2=\""+DvtEscapeString(cols[16])+"\","+
+    "CITY=\""+DvtEscapeString(cols[17])+"\","+
+    "STATE=\""+DvtEscapeString(cols[18])+"\","+
+    "ZIPCODE=\""+DvtEscapeString(cols[19])+"\","+
+    QString().sprintf("STATION_POWER=%d,",cols[29].toInt())+
+    QString().sprintf("STATION_NIGHT_POWER=%d ",cols[30].toInt())+
+    QString().sprintf("where ID=%d",affiliate_id);
   q=new QSqlQuery(sql);
   delete q;
 
@@ -358,6 +337,7 @@ void MainWidget::ImportPrecisionTrakRecord(const QStringList &cols)
   //
   QString phone;
   QString fax;
+  QString general_manager="N";
   QString program_director="N";
   QString title;
 
@@ -370,8 +350,13 @@ void MainWidget::ImportPrecisionTrakRecord(const QStringList &cols)
     phone=cols[5];
     fax=cols[6];
     program_director="N";
-    title=cols[21+i*3+1];
+    general_manager="N";
+    title=cols[20+i*3+1];
     switch(i) {
+    case 0:
+      general_manager="Y";
+      break;
+
     case 1:
       program_director="Y";
       break;
@@ -382,22 +367,62 @@ void MainWidget::ImportPrecisionTrakRecord(const QStringList &cols)
       title="Traffic Director";
       break;
     }
-    sql=QString().sprintf("insert into CONTACTS set \
-                           AFFILIATE_ID=%d,\
-                           NAME=\"%s\",\
-                           TITLE=\"%s\",\
-                           EMAIL=\"%s\",\
-                           PHONE=\"%s\",\
-                           FAX=\"%s\",\
-                           PROGRAM_DIRECTOR=\"%s\"",
-			  affiliate_id,
-			  (const char *)DvtEscapeString(cols[21+i*3]),
-			  (const char *)DvtEscapeString(title),
-			  (const char *)DvtEscapeString(cols[21+i*3+2]),
-			  (const char *)DvtNormalizePhoneNumber(phone),
-			  (const char *)DvtNormalizePhoneNumber(fax),
-			  (const char *)program_director);
+    sql=QString("insert into CONTACTS set ")+
+      QString().sprintf("AFFILIATE_ID=%d,",affiliate_id)+
+      "NAME=\""+DvtEscapeString(cols[20+i*3])+"\","+
+      "TITLE=\""+DvtEscapeString(title)+"\","+
+      "EMAIL=\""+DvtEscapeString(cols[20+i*3+2])+"\","+
+      "PHONE=\""+DvtNormalizePhoneNumber(phone)+"\","+
+      "FAX=\""+DvtNormalizePhoneNumber(fax)+"\","+
+      "GENERAL_MANAGER=\""+DvtEscapeString(general_manager)+"\","+
+      "PROGRAM_DIRECTOR=\""+DvtEscapeString(program_director)+"\"";
     q=new QSqlQuery(sql);
     delete q;
   }
+}
+
+
+void MainWidget::VerifyPrecisionTrakRecord(const QString &str1,const QString &str2,
+					   QStringList &errs)
+{
+  if(str1!=str2) {
+    errs.push_back(str1);
+  }
+}
+
+
+QString MainWidget::GetNextLine(FILE *f)
+{
+  QString ret;
+  int c;
+  int istate=0;
+
+  while(1==1) {
+    c=fgetc(f);
+    if(c==EOF) {
+      return ret;
+    }
+    switch(istate) {
+    case 0:
+      if(c==13) {
+	istate=1;
+      }
+      else {
+	if(iscntrl(c)!=0) {
+	  c=' ';
+	}
+	ret+=c;
+      }
+      break;
+
+    case 1:
+      if(c==10) {
+	return ret;
+      }
+      ret+=c;
+      istate=0;
+      break;
+    }
+  }
+  return QString();
 }
